--- a/bleserver.service
+++ b/bleserver.service
@@ -1,6 +1,4 @@
-# REFERENCE: https://www.reddit.com/r/raspberry_pi/comments/4vhofs/creating_a_systemd_daemon_so_you_can_run_a_python/
-#
-***bleserver.service***
+#REFERENCE: https://learn.adafruit.com/running-programs-automatically-on-your-tiny-computer/systemd-writing-and-enabling-a-service
 [Unit]
 Description=BLE Python Socket Server
 After=multi-user.target
@@ -14,3 +12,4 @@ Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
+Alias=bleserver.service
